--- a/module-1/lab-intro-pandas/your-code/main.ipynb
+++ b/module-1/lab-intro-pandas/your-code/main.ipynb
@@ -18,10 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,10 +44,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     5.7\n",
+      "1    75.2\n",
+      "2    74.4\n",
+      "3    84.0\n",
+      "4    66.5\n",
+      "5    66.3\n",
+      "6    55.8\n",
+      "7    75.7\n",
+      "8    29.1\n",
+      "9    43.7\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "series = pd.Series (lst)\n",
+    "print(series)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,10 +81,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.4"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "series.loc[2]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,10 +126,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      0     1     2     3     4\n",
+      "0  53.1  95.0  67.5  35.0  78.4\n",
+      "1  61.3  40.8  30.8  37.8  87.6\n",
+      "2  20.6  73.2  44.2  14.6  91.8\n",
+      "3  57.4   0.1  96.1   4.2  69.5\n",
+      "4  83.6  20.5  85.4  22.8  35.9\n",
+      "5  49.0  69.0   0.1  31.8  89.1\n",
+      "6  23.3  40.7  95.0  83.8  26.9\n",
+      "7  27.6  26.4  53.8  88.8  68.5\n",
+      "8  96.6  96.4  53.4  72.4  50.1\n",
+      "9  73.7  39.0  43.2  81.6  34.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame (b)\n",
+    "print(df)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,10 +170,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Score_1  Score_2  Score_3  Score_4  Score_5\n",
+      "0     53.1     95.0     67.5     35.0     78.4\n",
+      "1     61.3     40.8     30.8     37.8     87.6\n",
+      "2     20.6     73.2     44.2     14.6     91.8\n",
+      "3     57.4      0.1     96.1      4.2     69.5\n",
+      "4     83.6     20.5     85.4     22.8     35.9\n",
+      "5     49.0     69.0      0.1     31.8     89.1\n",
+      "6     23.3     40.7     95.0     83.8     26.9\n",
+      "7     27.6     26.4     53.8     88.8     68.5\n",
+      "8     96.6     96.4     53.4     72.4     50.1\n",
+      "9     73.7     39.0     43.2     81.6     34.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#df.rename(colnames, axis='columns')\n",
+    "df.columns = colnames\n",
+    "print(df)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,10 +206,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Score_1  Score_3  Score_5\n",
+      "0     53.1     67.5     78.4\n",
+      "1     61.3     30.8     87.6\n",
+      "2     20.6     44.2     91.8\n",
+      "3     57.4     96.1     69.5\n",
+      "4     83.6     85.4     35.9\n",
+      "5     49.0      0.1     89.1\n",
+      "6     23.3     95.0     26.9\n",
+      "7     27.6     53.8     68.5\n",
+      "8     96.6     53.4     50.1\n",
+      "9     73.7     43.2     34.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_subset=df.loc[:,'Score_1':'Score_5':2]\n",
+    "print(df_subset)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,10 +241,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "56.95000000000001\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean = df[\"Score_3\"].mean()\n",
+    "print(mean)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,10 +266,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "88.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "maximum_score = df[\"Score_4\"].max()\n",
+    "print(maximum_score)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,10 +291,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40.75\n"
+     ]
+    }
+   ],
+   "source": [
+    "median = df[\"Score_2\"].median()\n",
+    "print(median)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,10 +337,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Description</th>\n",
+       "      <td>LUNCH BAG APPLE DESIGN</td>\n",
+       "      <td>SET OF 60 VINTAGE LEAF CAKE CASES</td>\n",
+       "      <td>RIBBON REEL STRIPES DESIGN</td>\n",
+       "      <td>WORLD WAR 2 GLIDERS ASSTD DESIGNS</td>\n",
+       "      <td>PLAYING CARDS JUBILEE UNION JACK</td>\n",
+       "      <td>POPCORN HOLDER</td>\n",
+       "      <td>BOX OF VINTAGE ALPHABET BLOCKS</td>\n",
+       "      <td>PARTY BUNTING</td>\n",
+       "      <td>JAZZ HEARTS ADDRESS BOOK</td>\n",
+       "      <td>SET OF 4 SANTA PLACE SETTINGS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Quantity</th>\n",
+       "      <td>1</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2880</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <td>1.65</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>4.95</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>1.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Revenue</th>\n",
+       "      <td>1.65</td>\n",
+       "      <td>13.2</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>518.4</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>5.95</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>19.8</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>60</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                  0                                   1  \\\n",
+       "Description  LUNCH BAG APPLE DESIGN  SET OF 60 VINTAGE LEAF CAKE CASES    \n",
+       "Quantity                          1                                  24   \n",
+       "UnitPrice                      1.65                                0.55   \n",
+       "Revenue                        1.65                                13.2   \n",
+       "\n",
+       "                                       2                                  3  \\\n",
+       "Description  RIBBON REEL STRIPES DESIGN   WORLD WAR 2 GLIDERS ASSTD DESIGNS   \n",
+       "Quantity                               1                               2880   \n",
+       "UnitPrice                           1.65                               0.18   \n",
+       "Revenue                             1.65                              518.4   \n",
+       "\n",
+       "                                            4               5  \\\n",
+       "Description  PLAYING CARDS JUBILEE UNION JACK  POPCORN HOLDER   \n",
+       "Quantity                                    2               7   \n",
+       "UnitPrice                                1.25            0.85   \n",
+       "Revenue                                   2.5            5.95   \n",
+       "\n",
+       "                                          6              7  \\\n",
+       "Description  BOX OF VINTAGE ALPHABET BLOCKS  PARTY BUNTING   \n",
+       "Quantity                                  1              4   \n",
+       "UnitPrice                             11.95           4.95   \n",
+       "Revenue                               11.95           19.8   \n",
+       "\n",
+       "                                    8                              9  \n",
+       "Description  JAZZ HEARTS ADDRESS BOOK  SET OF 4 SANTA PLACE SETTINGS  \n",
+       "Quantity                           10                             48  \n",
+       "UnitPrice                        0.19                           1.25  \n",
+       "Revenue                           1.9                             60  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_dict = pd.DataFrame.from_dict(orders, orient='index')\n",
+    "display(df_dict)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -217,10 +480,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Quantity'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   2656\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2657\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2658\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.index.Int64Engine._check_type\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Quantity'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-40-37e1c61951db>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#suma de todas las cantidades\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Quantity'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m#total de los ingresos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   2925\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2926\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2927\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2928\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2929\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   2657\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2658\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2659\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_maybe_cast_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2660\u001b[0m         \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_indexer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmethod\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmethod\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtolerance\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtolerance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2661\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mindexer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/index_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.index.Int64Engine._check_type\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Quantity'"
+     ]
+    }
+   ],
+   "source": [
+    "#suma de todas las cantidades\n",
+    "df_dict['Quantity'].sum()\n",
+    "#total de los ingresos"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -253,7 +544,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
