--- a/module-1/lab-import-export/your-code/main.ipynb
+++ b/module-1/lab-import-export/your-code/main.ipynb
@@ -457,13 +457,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
     "\n",
-    "shuttle.to_csv('shuttle.csv', sep=',' )"
+    "shuttle.to_csv('shuttle.csv', sep=',', index=False )"
    ]
   },
   {
