--- a/module-1/lab-intro-pandas/your-code/main.ipynb
+++ b/module-1/lab-intro-pandas/your-code/main.ipynb
@@ -18,10 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -32,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,10 +44,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     5.7\n",
+       "1    75.2\n",
+       "2    74.4\n",
+       "3    84.0\n",
+       "4    66.5\n",
+       "5    66.3\n",
+       "6    55.8\n",
+       "7    75.7\n",
+       "8    29.1\n",
+       "9    43.7\n",
+       "dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "series = pd.Series(lst)\n",
+    "display(series)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -57,10 +83,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    74.4\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(lst[2])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,10 +129,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53.1</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>78.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>61.3</td>\n",
+       "      <td>40.8</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>87.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.6</td>\n",
+       "      <td>73.2</td>\n",
+       "      <td>44.2</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>91.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57.4</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>69.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>83.6</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>85.4</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>35.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      0     1     2     3     4\n",
+       "0  53.1  95.0  67.5  35.0  78.4\n",
+       "1  61.3  40.8  30.8  37.8  87.6\n",
+       "2  20.6  73.2  44.2  14.6  91.8\n",
+       "3  57.4   0.1  96.1   4.2  69.5\n",
+       "4  83.6  20.5  85.4  22.8  35.9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dtf = pd.DataFrame(b).head()\n",
+    "display(dtf)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -103,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,24 +241,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Score_1</th>\n",
+       "      <th>Score_2</th>\n",
+       "      <th>Score_3</th>\n",
+       "      <th>Score_4</th>\n",
+       "      <th>Score_5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53.1</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>78.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>61.3</td>\n",
+       "      <td>40.8</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>87.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.6</td>\n",
+       "      <td>73.2</td>\n",
+       "      <td>44.2</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>91.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57.4</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>69.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>83.6</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>85.4</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>35.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Score_1  Score_2  Score_3  Score_4  Score_5\n",
+       "0     53.1     95.0     67.5     35.0     78.4\n",
+       "1     61.3     40.8     30.8     37.8     87.6\n",
+       "2     20.6     73.2     44.2     14.6     91.8\n",
+       "3     57.4      0.1     96.1      4.2     69.5\n",
+       "4     83.6     20.5     85.4     22.8     35.9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dtf = pd.DataFrame(b).head()\n",
+    "\n",
+    "dtf.columns = colnames\n",
+    "display(dtf)\n",
+    "\n",
+    "#Usando el método <df_name>.columns = List o string --> sustituyes en orden los nombres de las etiquetas de columnas"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. Create a subset of this data frame that contains only the Score 1, 3, and 5 columns."
+    "#### 6. Create a subset of this data frame that contains only the Score 1, 3, and 5 columns."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Score_1</th>\n",
+       "      <th>Score_3</th>\n",
+       "      <th>Score_5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53.1</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>78.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>61.3</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>87.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.6</td>\n",
+       "      <td>44.2</td>\n",
+       "      <td>91.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57.4</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>69.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>83.6</td>\n",
+       "      <td>85.4</td>\n",
+       "      <td>35.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Score_1  Score_3  Score_5\n",
+       "0     53.1     67.5     78.4\n",
+       "1     61.3     30.8     87.6\n",
+       "2     20.6     44.2     91.8\n",
+       "3     57.4     96.1     69.5\n",
+       "4     83.6     85.4     35.9"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dtf1 = dtf[[\"Score_1\", \"Score_3\", \"Score_5\"] ]\n",
+    "display(dtf1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#lista = [3,2,4,4,3,2,3,4,3]\n",
+    "#lista[3]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,10 +460,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "mu = dtf[\"Score_3\"].mean()\n",
+    "print(mu)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,10 +485,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "maxi = dtf[\"Score_4\"].max()\n",
+    "print(maxi)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,10 +510,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "med = dtf[\"Score_2\"].median()\n",
+    "print(med)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,10 +556,133 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>Revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LUNCH BAG APPLE DESIGN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>1.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SET OF 60 VINTAGE LEAF CAKE CASES</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>13.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>RIBBON REEL STRIPES DESIGN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>1.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>WORLD WAR 2 GLIDERS ASSTD DESIGNS</td>\n",
+       "      <td>2880</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>518.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PLAYING CARDS JUBILEE UNION JACK</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>2.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>POPCORN HOLDER</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>5.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>BOX OF VINTAGE ALPHABET BLOCKS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11.95</td>\n",
+       "      <td>11.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>PARTY BUNTING</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4.95</td>\n",
+       "      <td>19.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>JAZZ HEARTS ADDRESS BOOK</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.19</td>\n",
+       "      <td>1.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>SET OF 4 SANTA PLACE SETTINGS</td>\n",
+       "      <td>48</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>60.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          Description  Quantity  UnitPrice  Revenue\n",
+       "0              LUNCH BAG APPLE DESIGN         1       1.65     1.65\n",
+       "1  SET OF 60 VINTAGE LEAF CAKE CASES         24       0.55    13.20\n",
+       "2         RIBBON REEL STRIPES DESIGN          1       1.65     1.65\n",
+       "3   WORLD WAR 2 GLIDERS ASSTD DESIGNS      2880       0.18   518.40\n",
+       "4    PLAYING CARDS JUBILEE UNION JACK         2       1.25     2.50\n",
+       "5                      POPCORN HOLDER         7       0.85     5.95\n",
+       "6      BOX OF VINTAGE ALPHABET BLOCKS         1      11.95    11.95\n",
+       "7                       PARTY BUNTING         4       4.95    19.80\n",
+       "8            JAZZ HEARTS ADDRESS BOOK        10       0.19     1.90\n",
+       "9       SET OF 4 SANTA PLACE SETTINGS        48       1.25    60.00"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "order1 = pd.DataFrame.from_dict(orders)\n",
+    "display(order1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -217,16 +693,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total quantity =  2978 ud.\n",
+      "Total revenue =  637.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "order1.describe()\n",
+    "\n",
+    "   \n",
+    "print( \"Total quantity = \", order1[\"Quantity\"].sum(), \"ud.\")\n",
+    "print( \"Total revenue = \", order1[\"Revenue\"].sum())\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 12. Obtain the prices of the most expensive and least expensive items ordered and print the difference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most expensive item cost =  11.95\n",
+      "Least expensive item cost =  0.18\n",
+      "And the difference between them is =  11.77\n"
+     ]
+    }
+   ],
+   "source": [
+    "print( \"Most expensive item cost = \", order1[\"UnitPrice\"].max())\n",
+    "print( \"Least expensive item cost = \", order1[\"UnitPrice\"].min())\n",
+    "maximo = order1[\"UnitPrice\"].max()\n",
+    "minimo = order1[\"UnitPrice\"].min()\n",
+    "print( \"And the difference between them is = \", maximo-minimo)\n"
    ]
   },
   {
@@ -253,7 +767,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
