--- a/module-1/lab-import-export/your-code/main.ipynb
+++ b/module-1/lab-import-export/your-code/main.ipynb
@@ -26,7 +26,8 @@
    "outputs": [],
    "source": [
     "# Your import here:\n",
-    "\n"
+    "\n",
+    "import pandas as np"
    ]
   },
   {
@@ -305,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
